@@ -2,6 +2,7 @@
 
  * src/spellcheck.c:
    Remove temporary testing code.
+   Replace deprecated g_strncasecmp() with g_ascii_strncasecmp().
 
 
 2008-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
